--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
+    "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
@@ -22,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.9",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
