--- a/app.json
+++ b/app.json
@@ -1,19 +1,16 @@
 {
   "expo": {
-    "name": "SwiftyCompanion",
-    "slug": "SwiftyCompanion",
+    "name": "swiftyCompanion",
+    "slug": "swiftyCompanion",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
     "ios": {
       "supportsTablet": true
     },
