--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swiftycompanion",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,27 +10,23 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@expo/webpack-config": "^18.0.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-picker/picker": "^2.4.10",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "expo": "~48.0.18",
-    "expo-constants": "~14.2.1",
-    "expo-device": "~5.2.1",
-    "expo-font": "~11.1.1",
-    "expo-status-bar": "~1.4.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-picker/picker": "^2.7.5",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "expo": "~51.0.28",
+    "expo-status-bar": "~1.12.1",
+    "punycode": "^2.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-dotenv": "^3.4.9",
+    "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "2.16",
     "react-native-modal": "^13.0.1",
-    "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10",
-    "victory-native": "^36.6.11"
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-svg": "^15.2.0",
+    "react-navigation": "^5.0.0",
+    "victory-native": "36.6.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
